[project]
name = "pumpking"
version = "0.1.0"
description = "An open-source Python library designed to streamline the complex process of document chunking, parsing, and representation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Yudivián Almeida Cruz", email = "yudiviant@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]
# Dependencias: Pydantic (Core) y Markdown (Parsing robusto)
dependencies = [
    "pydantic>=2.5.0",
    "markdown>=3.5.0",
    "openai>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- UV Configuration ---
[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

# --- Ruff (Linter) ---
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"] # Errores, Pyflakes, Imports, Bugbear (Simple)

# --- Mypy (Types) ---
[tool.mypy]
strict = true